--- a/src/index.css
+++ b/src/index.css
@@ -229,10 +229,10 @@ fridge-note {
 	height: calc(100vh - 144px);
 }
 
-input[name="note-style"]:checked + div {
+input[name="style"]:checked + div {
 	@apply border-green;
 }
 
-input[name="note-style"]:checked + div heroicon-check-circle {
+input[name="style"]:checked + div heroicon-check-circle {
 	@apply inline-block;
 }
